<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_image_selecter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@android:drawable/screen_background_dark">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar"
        app:title="@string/update_avart"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ImageView
        android:id="@+id/show_avatar"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:scaleType="fitCenter"
        android:layout_centerInParent="true"
        android:src="@drawable/def_pic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_select_camera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_camera_alt_black_24dp"
            android:gravity="center"
            android:text="@string/take_picture"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tv_select_photo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_photo_black_24dp"
            android:gravity="center"
            android:text="@string/select_pic"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tv_select_default"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_person_black_24dp"
            android:gravity="center"
            android:text="@string/pic_def"
            android:textColor="@android:color/darker_gray" />

    </LinearLayout>

</RelativeLayout>
